--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Upload to GitHub
         uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: build-${{ matrix.os }}-${{ matrix.python_verion}}
           path: ${{ github.workspace }}/dist
           
   publish:
@@ -41,8 +41,8 @@ jobs:
       - name: Download from GitHub
         uses: actions/download-artifact@v4
         with:
-          name: wheels
           path: ${{ github.workspace }}/dist
+          merge-multiple: true
           
       - name: Download UV
         uses: astral-sh/setup-uv@v5
