--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,12 +26,12 @@ jobs:
         uses: astral-sh/setup-uv@v5
 
       - name: Build Package
-        run: uv build
+        run: uv build --python ${{ matrix.python_version }}
 
       - name: Upload to GitHub
         uses: actions/upload-artifact@v4
         with:
-          name: build-${{ matrix.os }}-${{ matrix.python_verion}}
+          name: build-${{ matrix.os }}-${{ matrix.python_version}}
           path: ${{ github.workspace }}/dist
           
   publish:
