--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,6 +37,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     if: github.ref_type == 'tag'
+    environment: pypi
     steps:
       - name: Download from GitHub
         uses: actions/download-artifact@v4
