--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,6 +39,8 @@ jobs:
     if: github.ref_type == 'tag'
     needs: build
     environment: pypi
+    permissions:
+      id-token: write
     steps:
       - name: Download from GitHub
         uses: actions/download-artifact@v4
