Maybe this works?

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,12 @@ find = { where = ["python"] }
 [[tool.setuptools-rust.ext-modules]]
 # Private Rust extension module to be nested into Python package
 target = "crc64fast._lib"  
+
+[tool.cibuildwheel.linux]
+before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh"
+
+[tool.cibuildwheel.macos]
+before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh"
+
+[tool.cibuildwheel.windows]
+before-all = "wget https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-gnu/rustup-init.exe && .\\rustup-init.exe -vy"
